--- a/app/src/main/res/layout/text_view_temp.xml
+++ b/app/src/main/res/layout/text_view_temp.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <TextView
         android:text="@string/_1"
@@ -11,5 +13,13 @@
         android:id="@+id/sudoku"
         android:textSize="15sp"
         android:textColor="#255" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/line"/>
+
+
 </LinearLayout>
 
