--- a/app/src/main/res/layout-land/activity_main_menu.xml
+++ b/app/src/main/res/layout-land/activity_main_menu.xml
@@ -8,7 +8,7 @@
     tools:context="com.jonniewanathan.sudoku.MainMenu"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/woodh">
+    android:background="@drawable/wood">
 
     <Button
         android:id="@+id/load_game"
