--- a/app/src/main/res/layout-land/text_view_temp.xml
+++ b/app/src/main/res/layout-land/text_view_temp.xml
@@ -9,9 +9,12 @@
         android:text="@string/_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="9dp"
+        android:paddingBottom="3dp"
+        android:paddingTop="3dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
         android:id="@+id/sudoku"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textColor="#255" />
 
     <TextView
