--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.jonniewanathan.sudoku.SettingsActivity"
     android:orientation="vertical"
-    android:background="@drawable/cloudsh">
+    android:background="@drawable/woodh">
 
 
     <Switch
