--- a/app/src/main/res/layout-land/activity_load.xml
+++ b/app/src/main/res/layout-land/activity_load.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.jonniewanathan.sudoku.LoadActivity"
-    android:background="@drawable/wood">
+    android:background="@color/colorLightGrey">
 
 
     <ListView
