--- a/app/src/main/res/layout-land/activity_main_menu.xml
+++ b/app/src/main/res/layout-land/activity_main_menu.xml
@@ -8,27 +8,36 @@
     tools:context="com.jonniewanathan.sudoku.MainMenu"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/wood">
+    android:background="@color/colorLightGrey">
 
     <Button
         android:id="@+id/load_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/load_game"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:layout_marginBottom="20dp"
+        android:padding="5dp"
+        android:background="@drawable/border"/>
     <Button
         android:id="@+id/new_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_game"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:layout_marginBottom="20dp"
+        android:padding="5dp"
+        android:background="@drawable/border"/>
 
     <Button
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/settings"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:layout_marginBottom="20dp"
+        android:padding="5dp"
+        android:background="@drawable/border"/>
 
 
 </LinearLayout>
