--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jonniewanathan.sudoku.MainActivity"
-              android:background="@drawable/woodh">
+              android:background="@color/colorLightGrey">
 
     <GridView
         android:layout_width="match_parent"
